--- a/00--prelim.Rmd
+++ b/00--prelim.Rmd
@@ -33,15 +33,15 @@ knitr::include_graphics("figures/ackn_sn161.png")
 
 \newpage
 
-## Preface {-}
+## About {-}
 
 \vspace{1cm}
 
-\noindent Beside a print version, there is also an [electronic version](kleinhansda.github.io/phd_thesis)^[kleinhansda.github.io/phd_thesis] of this thesis. 
+\noindent Beside a print version, there is also an [electronic version](https://kleinhansda.github.io/phd_thesis/)^[https://kleinhansda.github.io/phd_thesis/] of this thesis. 
 
-\noindent In addition, data analysis scripts, figures and tables are stored in a dedicated [git repository](github.com/KleinhansDa/phd_thesis)^[github.com/KleinhansDa/phd_thesis].
+\noindent In addition, data analysis scripts, figures and tables are stored in a dedicated [git repository](https://github.com/KleinhansDa/phd_thesis)^[https://github.com/KleinhansDa/phd_thesis]. If you need to have access please contact me.
 
-![](figures/flipbook/flip.png)
+![](figures/versions/versions.png)
 
 \noindent \textbf{Print version}
   
@@ -58,7 +58,7 @@ knitr::include_graphics("figures/ackn_sn161.png")
 
 \newpage
 
-##  {-}
+## Foreword  {-}
 
 \vspace{1cm}
 
