--- a/00-summary.Rmd
+++ b/00-summary.Rmd
@@ -1,13 +1,11 @@
 # Summary {.unnumbered}
 
-While being one of the oldest biological disciples, developmental biology and in particular embryonic development in 2020 still offers many fundamental and unsolved questions. Underlying development is a very complex network of cellular interactions, which again underlie a seemingly indefinitely network of molecular reactions. Throughout development, a cells path along this network is defined by a combination of physical and chemical cues. In order to form an organ, cells that are initially uniform need to take up specialized functions and tasks. One key aspect in cellular identity is its form, which e.g. defines how susceptible the cell may be to intercellular-signaling. Shape therefore can tell us something about a cells current condition. 
+In order to form an organ, cells need to take up specialized functions and tasks. Cellular specialization is guided by an interplay of chemical signals and physical forces, where one influences the other. One aspect in cellular identity is its shape, which _e.g._ defines how susceptible the cell may be to intercellular signaling or in which section of the cell cycle it is and therefore can tell us something about its current state. Shape changes are introduced by motor proteins that are controlled and activated in a locally confined manner. For my thesis, I was interested to understand better how cellular shape and geometry impacts downstream cell and organ development. What happens if a cell can't transition to a specific shape? How does it affect tissue structure? How does it affect further development?
 
-To investigate developmental processes a model oragnism is needed that is suits the specific question. In my case, I was interested to understand better how cellular shape and geometry impacts downstream cell and organ development. Meaning: What happens if a cell can' transition take up a specific shape? How does it affect tissue structure? How does it affect further development? Amonst other benefits, the zebrafish _Danio rerio_ is, due to its natural transparency (during embryonic development), an ideal model organism. A particularly good model organ again is the Lateral Line System, since its developing just beneath a thin one cell layer of skin and therefore offers optimal conditions to be accessed by a light microscope. The Lateral Line System is common to common to all aquatic vertebrates and evolutionary remnants could even be found in humans. As its name already tells, the system is laterally positioned. It is comprised of many small organs, a few microns in size, that are interlinked by neurons and project hair cells through the skin. Therefore allowing the organism to sense water movements when the hair cells get deflected. Development of the primary lateral line takes about 20 hours during which a cluster of initially about 150 cells, the posterior lateral line primordium (pLLP), migrates from the anterior (head) to the posterior (tail) while depositing cell clusters in a regular pattern. After deposition those clusters will eventually mature and develop the hair cells necessary for the organ to function. Before the clusters are deposited, cells in the back of the pLLP organize radially into rosette like assemblies. Cells in those rosettes are connected with their apices. To get into an arrangement like this the cells need to apically constrict, which forces them into a wedge-like shape.
+One regulator of motor proteins like non-muscle myosin is Shroom3, which recently has been been shown to be expressed and involved in the development of the zebrafish lateral line organ [@Ernst2012a]. Development of the lateral line occurs through a migrating cluster of initially about 150 cells, the posterior lateral line primordium (pLLP), which migrates from the anterior (head) to the posterior (tail) while depositing cell clusters in a regular pattern. Literature on development of the lateral line suggests that in order for a cell cluster to be deposited from the pLLP, rosette formation is a key requirement. Therefore our expectation from the _shroom3_ mutant was that the amount of clusters deposited was significantly reduced. To our surprise, when we first inspected the end of migration lateral line phenotype we found many individuals with a significant _increase_ in cell clusters deposited. This made us re-think the role of Shroom3 during rosette assembly and the processes its involved in.
 
-From previous studies done in the lab we have identified a protein called Shroom3 to be necessary for the cells to take up this shape. Specifically, it was known from morpholino induced knock-downs of _shroom3_ rosette assembly was disturbed. To study the effects of Shroom3 on lateral line development, a TALEN induced mutant was generated. Literature on development of the lateral line suggests that in order for a cell cluster to be deposited from the pLLP, rosette formation is a key requirement. Therefore our expectation from the mutant was that the amount of clusters deposited was _at least_ significantly reduced. To our surprise, when we first inspected the end of migration lateral line phenotype we found many individuals with a significant increase in cell clusters deposited. This made us re-think Shroom3's role during rosette assembly and the processes its involved in. Furthermore, to accurately quantify the morphogenic processes Shroom3 is involved in I developed a new toolset that significantly improved and facilitated my research.
+To study the effects of Shroom3 on lateral line development, a mutant line was generated and crossed to various transgenic lines which express fluorescently labeled proteins that locate to organelles such as the plasma-membrane or the nucleus. Following, the mutant with its fluorescent labels was microscopically imaged under different conditions to quantify and analyze various cell-morphometric features. Even though the zebrafish is a popular model organism and its perfectly suited for developmental biology and advanced microscopy, there were no methods that would allow for a standardized and more automated pipeline of data acquisition and processing. Therefore, in order to accurately quantify the morphogenic processes Shroom3 is involved in, I developed a new toolset that significantly improved and facilitated my research. The toolset consists of (1) a new sample mounting method that is based on a 3D agarose gel that increases the number of embryos that can be mounted and imaged at once and speeds up the imaging process significantly (2) for subseqent image analysis I developed four programs that automate the process and therefore make the results much more reproducible and the analysis much more efficient. The first program is used for end of migration analyses, to deduce the pattern, count and size of Lateral Line cell clusters. The second is used not for _end_ of migration, but for _migration_ analyses (on timelapse recordings). Besides this it also prepares the images for more advanced downstream migration analyses and allows to analyse fluorescence signal on a second channel. The third program is used to analyse the pLLP only at high spatial resolution and to deduce the cell count, 3D cell morphometrics (like the volume) and cell orientation. The fourth program finally is used downstream of the second and third program and is capable of detecting and comparing them with the look of wildtype rosettes.
 
-Here we show that _Danio rerio_ Shroom3 is necessary to counteract pre-mature cluster deposition and therefore to maintain the range of clusters deposited, independent of proliferation. Furthermore we show that apical constriction and rosetization is not depleted in _shroom3_ deficient embryos, but that larger rosettes are fragmented into many smaller ones. Finally, we give an outlook on how absense of Shroom3 and absense of morphological chages may deregulate gene transcription by elevating the levels _atoh1a_, a transcription factor necessary for hair cell development.
+Here I show that in absence of Shroom3 rosette formation in the migrating pLLP is destabilized leading to facilitated cell cluster deposition and I show how this might be related to traction forces due to a possible interdependence of pLLP acceleration and speed of migration. Furthermore I show that apical constriction and rosette formation is not blocked in Shroom3 deficient embryos, but that larger rosettes are fragmented into many smaller ones. Finally, I give an outlook on how the absense of Shroom3 and hence the absense of morphological changes may deregulate gene transcription by elevating the levels Atoh1a, a transcription factor necessary for hair cell development.
 
-To compare data points between embryos in space and time, a precision of sample mounting and measurement taking was necessary that was not available. For sample mounting I developed a new method that is based on 3D agarose gel and that increases (1) the number of embryos that can be mounted and imaged at one (2) that is more gentle to the embryos and (3) that speeds up the imaging process significantly. In addition, for subseqent image analysis I developed a number of apps for 2- and 3-D analysis that automate the process and therefore make the results much more reproducible and the analysis much more efficient.
-
-My results and methodology demonstrate the importance of morphology in guiding developmental processes and how rather small morphological changes on the cellular level can impact further development significantly. My work also shows how howperful modern genetics, imaging and image analysis is and how diverse they are in terms of range of questions they are capable of answering. The methods and tools I developed prepare the ground for at least three quarters of the analyses I carried out and together with the documentation and data I provide, they are highly reproducible. Unfortunately, reproducibility in many publications is not a core aspect. However, it should be a main focus for _any_ study since reproducibility is what solidifies the scientific results. In that regard I am especially happy that one of my developments, an improved sample preparation method, is already used by many different labs all over the world helping them to make their results more reproducible.
+My results and methodology demonstrate the importance of morphology in guiding developmental processes and how rather small morphological changes on the cellular level can impact further development significantly. My work also shows how powerful modern genetics, imaging and image analysis are and how diverse they are in terms of range of questions they are capable of answering. The methods and tools I developed prepare the ground for at least three quarters of the analyses I carried out and together with the documentation and data I provide, they are highly reproducible. In that regard I am especially happy that one of my developments, an improved sample preparation method, is already used by many different labs all over the world helping _them_ to make their results more reproducible.
