--- a/00-zusammenfassung.Rmd
+++ b/00-zusammenfassung.Rmd
@@ -1,13 +1,12 @@
 # Zusammenfassung {.unnumbered}
 
-Obwohl sie eine der ältesten biologischen Disziplinen ist, bietet die Entwicklungsbiologie und insbesondere die Embryonalentwicklung im Jahr 2020 noch viele grundlegende und ungelöste Fragen. Der Entwicklung liegt ein sehr komplexes Netzwerk von zellulären Interaktionen zugrunde, die wiederum einem scheinbar unendlichen Netzwerk von molekularen Reaktionen untergeordnet sind. Während der gesamten Entwicklung wird der Weg einer Zelle entlang dieses Netzwerks durch eine Kombination von physikalischen und chemischen Hinweisen definiert. Um ein Organ zu bilden, müssen Zellen, die zunächst einheitlich sind, spezialisierte Funktionen und Aufgaben übernehmen. Ein Schlüsselaspekt der zellulären Identität ist ihre Form, die z.B. definiert, wie empfänglich die Zelle für interzelluläre Signale sein kann. Die Form kann uns also etwas über den aktuellen Zustand einer Zelle sagen. 
+Um ein Organ zu bilden, müssen Zellen spezialisierte Funktionen und Aufgaben übernehmen. Die zelluläre Spezialisierung wird durch ein Zusammenspiel von chemischen Signalen und physikalischen Kräften gesteuert, wobei das eine das andere beeinflusst. Ein Aspekt der zellulären Identität ist ihre Form, die _z.B._ definiert, wie empfänglich die Zelle für interzelluläre Signale ist oder in welchem Abschnitt des Zellzyklus sie sich befindet und somit etwas über ihren aktuellen Zustand aussagen kann. Formveränderungen werden durch Motorproteine eingeleitet, die lokal begrenzt gesteuert und aktiviert werden. Für diese Thesis war ich daran interessiert, besser zu verstehen, wie die zelluläre Form und Geometrie die nachfolgende Zell- und Organentwicklung beeinflusst. Was passiert, wenn eine Zelle nicht in eine bestimmte Form übergehen kann? Wie wirkt sich das auf die Gewebestruktur aus? Wie wirkt es sich auf die weitere Entwicklung aus?
 
-Um Entwicklungsprozesse zu untersuchen, benötigt man ein Modellorganismus, der zur spezifischen Fragestellung passt. In meinem Fall war ich daran interessiert, besser zu verstehen, wie sich die Form und Geometrie einer Zelle auf die nachfolgende Zell- und Organentwicklung auswirkt. Im Klartext bedeutet dies: Was passiert, wenn eine Zelle eine bestimmte Form annehmen kann? Wie wirkt sich das auf die Gewebestruktur aus? Wie wirkt es sich auf die weitere Entwicklung aus? Der Zebrafisch _Danio rerio_ ist unter anderem aufgrund seiner natürlichen Transparenz (während der Embryonalentwicklung) ein idealer Modellorganismus. Ein besonders gutes Modellorgan ist wiederum das Seitenliniensystem, da es sich direkt unter einer dünnen, einzelligen Hautschicht entwickelt und somit optimale Bedingungen für den Zugang mit einem Lichtmikroskop bietet. Das Seitenliniensystem ist allen aquatischen Wirbeltieren gemeinsam, und evolutionäre Überbleibsel konnten sogar beim Menschen gefunden werden. Wie der Name schon sagt, ist das System seitlich angeordnet. Es besteht aus vielen kleinen, nur wenige Mikrometer großen Organen, die durch Neuronen miteinander verbunden sind und Haarzellen durch die Haut projizieren. Dadurch kann der Organismus Wasserbewegungen wahrnehmen, wenn die Haarzellen abgelenkt werden. Die Entwicklung der primären Seitenlinie dauert etwa 20 Stunden, in denen ein Cluster von anfänglich etwa 150 Zellen, das posteriore Seitenlinienprimordium (pLLP), vom vorderen (Kopf) zum hinteren (Schwanz) wandert und dabei Zellcluster in einem regelmäßigen Muster ablagert. Nach der Ablagerung reifen diese Cluster schließlich aus und entwickeln die für die Funktion des Organs notwendigen Haarzellen. Bevor die Cluster abgelagert werden, organisieren sich die Zellen im hinteren Teil des pLLP radial zu rosettenartigen Ansammlungen. Die Zellen in diesen Rosetten sind mit ihren Apizes verbunden. Um eine solche Anordnung zu erreichen, müssen sich die Zellen apikal zusammenziehen, was sie in eine keilförmige Form zwingt.
+Ein Regulator von Motorproteinen wie dem non-muscle myosin ist Shroom3, von dem kürzlich gezeigt wurde, dass es exprimiert wird und an der Entwicklung des Zebrafisch-Seitenlinienorgans beteiligt ist [@Ernst2012a]. Die Entwicklung der Seitenlinie erfolgt durch einen wandernden Cluster von anfänglich ca. 150 Zellen, das posteriore Seitenlinienprimordium (pLLP), das von vorne (Kopf) nach hinten (Schwanz) wandert und dabei Zellhaufen in einem regelmäßigen Muster ablagert. Die Literatur über die Entwicklung der Seitenlinie deutet darauf hin, dass für die Ablagerung eines Zellhaufens aus dem pLLP die Rosettenbildung eine wichtige Voraussetzung ist. Daher war unsere Erwartung an die Mutante, dass die Menge der abgelagerten Cluster _zumindest_ deutlich reduziert ist. Zu unserer Überraschung fanden wir bei der ersten Untersuchung des End-of-Migration-Lateral-Line-Phänotyps viele Individuen mit einer signifikanten Zunahme an abgelagerten Zellhaufen. Dies veranlasste uns, die Rolle von Shroom3 während der Rosettenbildung und die Prozesse, an denen es beteiligt ist, neu zu überdenken.
 
-Aus früheren Studien im Labor haben wir ein Protein namens Shroom3 identifiziert, das notwendig ist, damit die Zellen diese Form annehmen können. Insbesondere war aus Morpholino-induzierten Knock-Downs von _shroom3_ bekannt, dass die Rosettenmontage gestört ist. Um die Auswirkungen von Shroom3 auf die Seitenlinienentwicklung zu untersuchen, wurde eine TALEN-induzierte Mutante erzeugt. Die Literatur über die Entwicklung der Seitenlinie legt nahe, dass die Rosettenbildung eine wichtige Voraussetzung für die Ablage eines Zellhaufens aus dem pLLP ist. Daher war unsere Erwartung an die Mutante, dass die Menge der abgelagerten Cluster _zumindest_ deutlich reduziert ist. Zu unserer Überraschung fanden wir bei der ersten Untersuchung des End-of-Migration-Lateral-Line-Phänotyps viele Individuen mit einer signifikanten Zunahme an abgelagerten Zellclustern. Dies veranlasste uns, die Rolle von Shroom3 während der Rosettenmontage und die Prozesse, an denen es beteiligt ist, neu zu überdenken. Um die morphogenetischen Prozesse, an denen Shroom3 beteiligt ist, genau zu quantifizieren, habe ich ein neues Toolset entwickelt, das meine Forschung deutlich verbessert und erleichtert hat.
+Um die Auswirkungen von Shroom3 auf die Entwicklung des Seitenlinienen Organs zu untersuchen, wurde eine mutante Linie generiert und mit verschiedenen transgenen Linien gekreuzt, die fluoreszenzmarkierte Proteine exprimieren, die sich an Organellen wie der Plasmamembran oder dem Zellkern lokalisieren. Anschließend wurde die Mutante mit ihren fluoreszierenden Markierungen unter verschiedenen Bedingungen mikroskopisch abgebildet, um verschiedene zellmorphometrische Merkmale zu quantifizieren und zu analysieren. Obwohl der Zebrafisch ein beliebter Modellorganismus ist und sich hervorragend für die Entwicklungsbiologie und fortgeschrittene Mikroskopie eignet, gab es bisher keine Methoden, die eine standardisierte und stärker automatisierte Pipeline der Datenerfassung und -verarbeitung ermöglichen würden. Um die morphogenetischen Prozesse, an denen Shroom3 beteiligt ist, genau quantifizieren zu können, habe ich ein neues Toolset entwickelt, das meine Arbeit deutlich effizienter gemacht hat. Das Toolset besteht aus (1) einer neuen Methode zur Probenmontage, die auf einem 3D-Agarosegel basiert, das die Anzahl der Embryonen die auf einmal montiert und abgebildet werden können erhöht und den Bildgebungsprozess erheblich beschleunigt. (2) Für die Bildanalyse habe ich vier Programme entwickelt, die den Prozess automatisieren und somit die Ergebnisse reproduzierbarer und die Analyse deutlich effizienter machen. Das erste Programm wird für Analysen am Ende der Migration verwendet, um das Muster, die Anzahl und die Größe von Seitenlinien Zellhaufen abzuleiten. Das zweite wird nicht für _Ende der Migration_, sondern für Analysen der _Migration_ (bei Zeitrafferaufnahmen) verwendet. Außerdem bereitet es die Bilder für weitergehende Downstream-Migrationsanalysen vor und ermöglicht die Analyse des Fluoreszenzsignals auf einem zweiten Kanal. Das dritte Programm wird verwendet, um das pLLP bei hoher räumlicher Auflösung zu analysieren und um die Zellzahl, 3D-Zellmorphometrie (wie das Volumen) und die Zellorientierung zu analysieren. Das vierte Programm schließlich wird dem zweiten und dritten Programm nachgeschaltet und ist in der Lage, zelluläre Rosetten zu erkennen und mit dem Aussehen von wildtyp Rosetten zu vergleichen und zu gewichten.
 
-Hier zeigen wir, dass _Danio rerio_ Shroom3 notwendig ist, um der vorzeitigen Ablagerung von Clustern entgegenzuwirken und somit die Bandbreite der abgelagerten Cluster aufrechtzuerhalten, unabhängig von der Proliferation. Weiterhin zeigen wir, dass die apikale Konstriktion und Rosettenbildung in _Shroom3_ defizienten Embryonen nicht beeinträchtigt ist, sondern dass größere Rosetten in viele kleinere fragmentiert werden. Schließlich geben wir einen Ausblick darauf, wie das Fehlen von Shroom3 und das Fehlen von morphologischen Veränderungen die Gentranskription deregulieren kann, indem wir die Spiegel von _atoh1a_, einem für die Haarzellentwicklung notwendigen Transkriptionsfaktor, erhöhen.
+Hier zeige ich, dass in Abwesenheit von Shroom3 die Rosettenbildung im migrierenden pLLP destabilisiert ist, was zu einer verstärkten Ablagerung von Zellhaufen führt, und ich zeige, wie dies aufgrund einer möglichen Abhängigkeit der Beschleunigung und Migrationsgeschwindigkeit des pLLP mit Traktionskräften zusammenhängen könnte. Weiterhin zeige ich, dass die apikale Konstriktion und Rosettenbildung in Shroom3-defizienten Embryonen nicht blockiert ist, sondern dass größere Rosetten in viele kleinere fragmentiert werden. Schließlich gebe Ich einen Ausblick darauf, wie das Fehlen von Shroom3 und das Ausbleiben der morphologischen Veränderungen die Gentranskription deregulieren kann, indem die Mengen von Atoh1a, einem für die Haarzellentwicklung notwendigen Transkriptionsfaktor, erhöht werden.
 
-Um Datenpunkte zwischen Embryonen räumlich und zeitlich vergleichen zu können, war eine Präzision der Probenmontage und Messaufnahme notwendig, die nicht vorhanden war. Für die Probenmontage habe ich eine neue Methode entwickelt, die auf 3D-Agarosegel basiert und die (1) die Anzahl der Embryonen, die montiert und abgebildet werden können, erhöht, (2) die schonender für die Embryonen ist und (3) die den Bildgebungsprozess deutlich beschleunigt. Darüber hinaus habe ich für die subseqente Bildanalyse eine Reihe von Apps für die 2- und 3-D-Analyse entwickelt, die den Prozess automatisieren und damit die Ergebnisse viel reproduzierbarer und die Analyse viel effizienter machen.
+Für die Probenmontage habe ich eine neue Methode entwickelt, die auf einem 3D-Agarosegel basiert und (1) die Anzahl der Embryonen, die auf einmal montiert und abgebildet werden können, erhöht (2) schonender für die Embryonen ist und (3) den Bildgebungsprozess deutlich beschleunigt. Darüber hinaus habe ich für die subseqente Bildanalyse eine Reihe von Programmen für die 2- und 3-D-Analyse entwickelt, die den Prozess automatisieren und damit die Ergebnisse reproduzierbarer und die Analyse deutlich effizienter machen. Meine Ergebnisse und meine Methodik zeigen, wie wichtig die Morphologie bei der Steuerung von Entwicklungsprozessen ist und wie eher kleine morphologische Veränderungen auf zellulärer Ebene die weitere Entwicklung erheblich beeinflussen können. Meine Arbeit zeigt auch, wie leistungsfähig die moderne Genetik, Mikroskopie und Bildanalyse sind und wie vielfältig sie in Bezug auf die Bandbreite der Fragen sind, die sie beantworten können. Die von mir entwickelten Methoden und Werkzeuge bilden die Grundlage für mindestens drei Viertel der von mir durchgeführten Analysen, und zusammen mit der Dokumentation und den Daten sind sie in hohem Maße reproduzierbar. In dieser Hinsicht freut es mich besonders, dass eine meiner Entwicklungen, eine verbesserte Probenvorbereitungsmethode, bereits von vielen verschiedenen Laboren auf der ganzen Welt eingesetzt wird und ihnen hilft, ihre Ergebnisse reproduzierbarer zu machen.
 
-Meine Ergebnisse und Methoden zeigen, wie wichtig die Morphologie für die Steuerung von Entwicklungsprozessen ist und wie eher kleine morphologische Veränderungen auf zellulärer Ebene die weitere Entwicklung maßgeblich beeinflussen können. Meine Arbeit zeigt auch, wie leistungsfähig die moderne Genetik, Bildgebung und Bildanalyse ist und wie vielfältig sie in Bezug auf die Bandbreite der Fragen ist, die sie beantworten kann. Die von mir entwickelten Methoden und Werkzeuge bilden die Grundlage für mindestens drei Viertel der von mir durchgeführten Analysen, und zusammen mit der Dokumentation und den Daten sind sie in hohem Maße reproduzierbar. Leider ist die Reproduzierbarkeit in vielen Publikationen kein Kernaspekt. Sie sollte aber bei _jeder_ Studie ein Hauptaugenmerk sein, denn die Reproduzierbarkeit ist das, was die wissenschaftlichen Ergebnisse absichert. In dieser Hinsicht freut es mich besonders, dass eine meiner Entwicklungen, eine verbesserte Probenvorbereitungsmethode, bereits von vielen verschiedenen Laboren auf der ganzen Welt eingesetzt wird und ihnen hilft, ihre Ergebnisse reproduzierbarer zu machen.
