--- a/index.Rmd
+++ b/index.Rmd
@@ -11,11 +11,11 @@ title: '**Genetic and Mechanic Signaling in Organ Development**'
 knit: "bookdown::render_book"
 site: bookdown::bookdown_site
 output: 
-  thesisdown::thesis_pdf:
+  #thesisdown::thesis_pdf:
+  #  highlight: monochrome # https://stackoverflow.com/questions/30880200/pandoc-what-are-the-available-syntax-highlighters
+  #  toc_depth: 4
+  thesisdown::thesis_gitbook:
     highlight: monochrome # https://stackoverflow.com/questions/30880200/pandoc-what-are-the-available-syntax-highlighters
-    toc_depth: 4
-  #thesisdown::thesis_gitbook:
-    #highlight: monochrome # https://stackoverflow.com/questions/30880200/pandoc-what-are-the-available-syntax-highlighters
 
 #  thesisdown::thesis_word: default
 #  thesisdown::thesis_epub: default
@@ -28,8 +28,8 @@ output:
 # like below, use a command like that for the abstract above.  Note that a tab is 
 # needed on the line after the |.,
 
-bibliography: files/library.bib
-csl: files/science.csl
+bibliography: files/refs/library.bib
+csl: files/refs/science.csl
 lot: true
 lof: true
 disclosure: |
